--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -1,9 +1,9 @@
 version: "3.8"
 services:
   app:
-    image: ghcr.io/vas3k/pepic:${GITHUB_SHA:-latest}
+    image: ghcr.io/xen-sor/pepic:${GITHUB_SHA:-latest}
     environment: # check out pepic/config/app.go for more env variables
-      - BASE_URL=https://i.vas3k.ru/
+      - BASE_URL=https://www.i.yourtravelmate.club/
       - STORAGE_DIR=/uploads
       - SECRET_CODE=wowsosecret
       - IMAGE_ORIGINAL_LENGTH=1400
