--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment: # check out pepic/config/app.go for more env variables
       - BASE_URL=https://www.i.yourtravelmate.club/
       - STORAGE_DIR=/uploads
-      - SECRET_CODE=wowsosecret
+      - SECRET_CODE=secrettmclub
       - IMAGE_ORIGINAL_LENGTH=1400
       - MAX_UPLOAD_SIZE=100M
     volumes:
